--- a/BombAlarm/TISensorBrowser.Core/Pages/SetTimerPage.xaml
+++ b/BombAlarm/TISensorBrowser.Core/Pages/SetTimerPage.xaml
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="TISensorBrowser.SetTimerPage">
 	<ContentPage.Content>
+		<StackLayout Spacing = "20" VerticalOptions = "Center" >
+			<TimePicker x:Name = "timePicker" PropertyChanged = "OnTimePickerPropertyChanged" />
+			<Switch x:Name = "t_switch" HorizontalOptions = "End" Toggled = "OnSwitchToggled" />
+			<Entry x:Name = "entry" Text = "Sample Timer" Placeholder = "label" />
+		</StackLayout>
 	</ContentPage.Content>
 </ContentPage>
